--- a/components/profile_link/github_link.module.scss
+++ b/components/profile_link/github_link.module.scss
@@ -1,4 +1,5 @@
 .innerBox{ 
+  user-select: none;
     width: 3.5rem;
      height: 3rem; 
      padding: 0.4rem 0.2rem; 
@@ -7,6 +8,7 @@
      float:left; 
 }
 .title{
+  user-select: none;
     text-shadow: none;
     font-weight: 500;
     padding: 0.5rem 0.3rem; 
@@ -15,7 +17,6 @@
     height:3rem;
     line-height: 1.7rem;
    float: right; 
-   text-align: left; 
    vertical-align: middle;
    align-items: center;
 }
@@ -29,14 +30,14 @@
     left: 0;
     right: 0;
   
-  position: absolute;
+   position: fixed;
   
     z-index: 9999;
-    margin: 20vh auto;
-    font-size: 24px;
+    margin: 8vh 10vh;
+    font-size: 20px;
     align-items: center;
     text-align: center;
-    width: 22rem;
+    width: 16rem;
     max-width: 90%;
   
     height: 3rem;
@@ -68,16 +69,12 @@
   
   }
   
-  @media screen and (max-width: 100rem) {
-  
-    .homeButton {
-      margin: 15vh auto;
-    }
-  }
-  
+
   @media screen and (max-width: 45rem) {
   
     .homeButton {
+      width:90%;
+      position:fixed;
       margin: 5vh auto;
     }
   }
