--- a/styles/page_styles/project.module.scss
+++ b/styles/page_styles/project.module.scss
@@ -122,6 +122,7 @@
 }
 
 .homeButton:hover {
+  user-select: none;
   background-position: right center;
   //opacity: 0.9;
   background-position: 100% 0;
